--- a/index.html
+++ b/index.html
@@ -1,9 +1,53 @@
 <!DOCTYPE html>
-<html>
-<head>
-    <title>Test Page</title>
-</head>
-<body>
-Hello World, we are software developers!
-</body>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <title>SOS Turtle</title>
+        <link href="css/bootstrap.min.css" rel="stylesheet">
+        <link href="css/styles.css" rel="stylesheet">
+    </head>
+    <body >
+        <div class="container-fluid">
+            <div class="row jumbotron_bg">
+                <div class="jumbotron">
+                    <div class="row">
+                        <div class="col-lg-3 col-md-3">
+                            <img src="img/logo.png" srcset="img/logo@2x.png 2x, img/logo@3x.png 3x" class="Logo">
+                        </div>
+                        <div class="col-lg-8 col-md-8">
+                            <div class="col-lg-offset-3 col-md-offset-3"></div>
+                            <div class="col-lg-6 col-md-6">
+                                <a class="custom-navbar-link" >Home</a>
+                                <a class="custom-navbar-link">Stories</a>
+                                <a class="custom-navbar-link">News</a>
+                                <a class="custom-navbar-link">Research</a>
+                                <a class="custom-navbar-link">Blog</a>
+                                <a class="custom-navbar-link">Contact</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div style="margin-left: 12%; margin-top: 10%">
+                        <p><u class="Welcome">Welcome</u></p>
+                            <p class="Help-Us-Save-A-Billi">Help us save <br> A billion baby turtles</p>
+                        <p>
+                            <span style="color: white" class="glyphicon glyphicon-play-circle" aria-hidden="true">
+                                <span class="HOW-WE-USE-YOUR-DONA">HOW WE USE YOUR DONATION</span>
+                            </span>
+                        </p>
+                    </div>
+                    <div class="row">
+                        <div class="col-lg-offset-1 col-lg-10">
+                            <div style="padding: 3%; background-color: white; border-radius: 4px;">
+                                <div class="row">
+                                    <div class="col-lg-4">Donate to save baby turtles</div>
+                                    <div class="col-lg-4"></div>
+                                    <div class="col-lg-4"></div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </body>
 </html>
