--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
                 <div class="jumbotron">
                     <div class="row">
                         <div class="col-lg-3 col-md-3">
-                            <img src="img/logo.png" srcset="img/logo@2x.png 2x, img/logo@3x.png 3x" class="Logo">
+                            <img src="img/logo.png"class="Logo">
                         </div>
                         <div class="col-lg-8 col-md-8">
                             <div class="col-lg-offset-3 col-md-offset-3"></div>
