--- a/index.html
+++ b/index.html
@@ -1,53 +1,157 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <title>SOS Turtle</title>
-        <link href="css/bootstrap.min.css" rel="stylesheet">
-        <link href="css/styles.css" rel="stylesheet">
-    </head>
-    <body >
-        <div class="container-fluid">
-            <div class="row jumbotron_bg">
-                <div class="jumbotron">
-                    <div class="row">
-                        <div class="col-lg-3 col-md-3">
-                            <img src="img/logo.png"class="Logo">
-                        </div>
-                        <div class="col-lg-8 col-md-8">
-                            <div class="col-lg-offset-3 col-md-offset-3"></div>
-                            <div class="col-lg-6 col-md-6">
-                                <a class="custom-navbar-link" >Home</a>
-                                <a class="custom-navbar-link">Stories</a>
-                                <a class="custom-navbar-link">News</a>
-                                <a class="custom-navbar-link">Research</a>
-                                <a class="custom-navbar-link">Blog</a>
-                                <a class="custom-navbar-link">Contact</a>
-                            </div>
-                        </div>
-                    </div>
-                    <div style="margin-left: 12%; margin-top: 10%">
-                        <p><u class="Welcome">Welcome</u></p>
-                            <p class="Help-Us-Save-A-Billi">Help us save <br> A billion baby turtles</p>
-                        <p>
-                            <span style="color: white" class="glyphicon glyphicon-play-circle" aria-hidden="true">
-                                <span class="HOW-WE-USE-YOUR-DONA">HOW WE USE YOUR DONATION</span>
-                            </span>
-                        </p>
-                    </div>
-                    <div class="row">
-                        <div class="col-lg-offset-1 col-lg-10">
-                            <div style="padding: 3%; background-color: white; border-radius: 4px;">
-                                <div class="row">
-                                    <div class="col-lg-4">Donate to save baby turtles</div>
-                                    <div class="col-lg-4"></div>
-                                    <div class="col-lg-4"></div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+
+<head>
+  <meta charset="UTF-8">
+  <title>SOS Turtle</title>
+  <link href="css/bootstrap.min.css" rel="stylesheet">
+  <link href="./css/styles.css" rel="stylesheet">
+
+</head>
+
+<body>
+  <div class="container-fluid">
+    <div class="row jumbotron_bg">
+      <div class="jumbotron">
+        <div class="row">
+          <div class="col-lg-3 col-md-3">
+            <img src="img/logo.png" class="Logo">
+          </div>
+          <div class="col-lg-8 col-md-8">
+            <div class="col-lg-offset-3 col-md-offset-3"></div>
+            <div class="col-lg-6 col-md-6">
+              <a class="custom-navbar-link">Home</a>
+              <a class="custom-navbar-link">Stories</a>
+              <a class="custom-navbar-link">News</a>
+              <a class="custom-navbar-link">Research</a>
+              <a class="custom-navbar-link">Blog</a>
+              <a class="custom-navbar-link">Contact</a>
             </div>
+          </div>
         </div>
-    </body>
+        <div style="margin-left: 12%; margin-top: 10%">
+          <p><u class="Welcome">Welcome</u></p>
+          <p class="Help-Us-Save-A-Billi">Help us save <br> A billion baby turtles</p>
+          <p>
+            <span style="color: white" class="glyphicon glyphicon-play-circle" aria-hidden="true">
+                                <span class="HOW-WE-USE-YOUR-DONA">HOW WE USE YOUR DONATION</span>
+            </span>
+          </p>
+        </div>
+        <div class="row">
+          <div class="col-lg-offset-1 col-lg-10">
+            <div style="padding: 3%; background-color: white; border-radius: 4px;">
+              <div class="row">
+                <div class="col-lg-4">Donate to save baby turtles</div>
+                <div class="col-lg-4"></div>
+                <div class="col-lg-4"></div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="container-content">
+
+    <div class="content-list">
+      <div class="left-column">
+        <img src="./assets/cedric-frixon-463001-unsplash_2.png">
+      </div>
+      <div class="right-column">
+        <h6>PROJECTS</h6>
+        <h1>SOS Turtle<br/>Conservations<br/>Tours</h1>
+        <p>Unique opportunities to participate in wildlife conservation programs. Check out our hands-on tours to Costa Rica, Cuba, Mexico, and more.</p>
+        <h6 class="read-more-btn">upcoming turtle tours <img src=""></h6>
+      </div>
+    </div>
+
+    <div class="content-list">
+      <div class="left-column">
+        <h6>Programs</h6>
+        <h1>school and<br/>educational<br/>Programs</h1>
+        <p>Helping students learn about and experience turtle conservation. We have Lesson plans, field trips, presentations, and fundraisers. </p>
+        <h6>School Programs <img src=""></h6>
+      </div>
+      <div class="right-column">
+        <img src="./assets/cedric-frixon-463001-unsplash.png">
+      </div>
+
+    </div>
+    <div class="content-list">
+      <div class="left-column">
+        <h1>BILLION BABY<br/>TURTLES</h1>
+        <p>We protect endangered sea turtles throughout Latin America and the world by supporting community-based conservation eforts. </p>
+        <div class="blocks">
+          <div class="block">
+            <h1>09</h1>
+            <span>grants to conservation
+organizations</span>
+          </div>
+          <div class="block">
+            <h1>10</h1>
+            <span>turtle nesting<br/>beaches supported</span>
+          </div>
+          <div class="block">
+            <h1>05</h1>
+            <span>species of sea<br/>turtles protected</span>
+          </div>
+
+        </div>
+      </div>
+      <div class="right-column">
+        <h1>407k</h1>
+        <span>hatchlings<br/>saved</span>
+      </div>
+    </div>
+
+    <div class="content-list">
+      <div class="left-column">
+        <img src="cedric-frixon-463001-unsplash.png">
+      </div>
+      <div class="right-column">
+        <h6></h6>
+        <h1></h1>
+        <p></p>
+      </div>
+      <div class="slider-dots">
+        <img src="" />
+        <img src="" />
+        <img src="" />
+      </div>
+    </div>
+    <div class="content-list">
+      <div class="left-column">
+        <h6>CAMPAIGN</h6>
+        <h1>Milman<br/>Islet Research</h1>
+        <h6>On June 12, 2018 / By Turtle Save</h6>
+        <img src="">
+        <p>Researchers have been monitoring nesting turtle populations on Milman Islet for over 25 years. It is a small sandy cay within the Denham groups of Islands in the northern Great…</p>
+        <h6>continue reading</h6>
+      </div>
+      <div class="right-column">
+        <h6>continue reading</h6>
+        <h1>Project Assistant<br/>Volunteer</h1>
+        <h6>On February 10, 2018 / By Turtle Save</h6>
+        <img src="cedric-frixon-463001-unsplash.png">
+        <p>We are now looking for a Project Assistant to undertake research, prepare information (including written communications and documentation) and provide fundraising, program…</p>
+        <h6>continue reading</h6>
+        <button></button>
+      </div>
+    </div>
+  </div>
+
+  <div class="container-signup">
+    Sign up for monthly news, fun promotions,
+    <span>and ways to help save turtles!</span>
+    <div class="email"><button>subscribe</button></div>
+  </div>
+
+  <footer>
+    Created by Geovani Almeida CC 2018, Creative Commons 4.0
+    <span class="icons"></span>
+  </footer>
+</body>
+
 </html>
