Added vertical line

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           <p class="Help-Us-Save-A-Billi">Help us save <br> A billion baby turtles</p>
           <p>
             <span style="color: white" class="glyphicon glyphicon-play-circle" aria-hidden="true">
-                                <span class="HOW-WE-USE-YOUR-DONA">HOW WE USE YOUR DONATION</span>
+              <span class="HOW-WE-USE-YOUR-DONA">HOW WE USE YOUR DONATION</span>
             </span>
           </p>
         </div>
@@ -43,7 +43,9 @@
             <div style="padding: 3%; background-color: white; border-radius: 4px;">
               <div class="row">
                 <div class="col-lg-4">Donate to save baby turtles</div>
-                <div class="col-lg-4"></div>
+                <div class="col-lg-4">
+                  <div class="vl"></div>
+                </div>
                 <div class="col-lg-4"></div>
               </div>
             </div>
